--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,20 @@
 <%= video_helper('binary.mp4', "backgroundb.png") %>
-  <main class="home-card">
-    <h1 class="cover-heading">Welcome!</h1>
-    <p class="lead"> 
-    	<h3>"A clever person solves a problem.<h2>
-        <h3>A wise person AVOIDS it."<h2>
-        <h5>- Albert Einstein<h5>
-    </p>
-    <p class="lead">
-      <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
-    </p>
-  </main>
 
+<div class="col-md-12">
+  
+    <main class="home-card" >
+      <h1 class="cover-heading">Welcome!</h1>
+      <p class="lead"> 
+      	<h3>"A clever person solves a problem.<h2>
+          <h3>A wise person AVOIDS it."<h2>
+          <h5>- Albert Einstein<h5>
+      </p>
+      <p class="lead">
+        <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
+      </p>
+    </main>
+  
+</div>
 
 
 
