--- a/app/views/shared/_about_me_images.html.erb
+++ b/app/views/shared/_about_me_images.html.erb
@@ -1,8 +1,6 @@
 <% images.each do | image | %>
 	<%= "<div class = '#{image[:style1]}'>".html_safe %>
-		<% image[:iterate].times do %>	
-			<br>
-		<% end %>
-		<%= image_tag image[:image], height: image[:height], class: image[:style2],alt: image[:alt] %>
-	</div>
+		<%= break_space image %>
+		<%= image_tag image[:image], width:  image[:width], class: image[:style2],alt: image[:alt] %>	
+    </div>
 <% end %>
