--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,7 +1,10 @@
-<hr>
-<footer class="mastfoot mt-auto" style = "text-align: center;">
-    <div class="inner app-footer" style = "text-align: center;">
-      <p style = "text-align: center;"><%= copyright_generator %></p>
-    </div>
-</footer>
+<div class = "container">
+	<hr>
+	<footer class="mastfoot mt-auto" >
+	    <div class="inner app-footer" >
+	      <p style = "text-align: center;"><%= copyright_generator %></p>
+	    </div>
+	</footer>
+</div>
+
 
