--- a/app/views/shared/_certification_images.html.erb
+++ b/app/views/shared/_certification_images.html.erb
@@ -1,8 +1,6 @@
 <% certifications.each do | certification | %>
 	<%= "<div class = '#{certification[:style1]}'>".html_safe %>
-		<% certification[:iterate].times do %>	
-			<br>
-		<% end %>
-		<%= image_tag certification[:image], height: certification[:height], class: certification[:style2],alt: certification[:alt] %>
+		<%= break_space certification %>	
+		<%= image_tag certification[:image], width: certification[:width], class: certification[:style2],alt: certification[:alt] %>
 	</div>
 <% end %>
