--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -145,7 +145,6 @@ h6, .h6 {
 
 .featured-text {
     word-wrap: break-word;
-    width: 1075px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;    
@@ -153,7 +152,6 @@ h6, .h6 {
 
 .blog-body {
     word-wrap: break-word;
-    width: 765px;
     white-space: pre-wrap;
     overflow: hidden;
     text-overflow: ellipsis;    
@@ -161,7 +159,6 @@ h6, .h6 {
 
 .featured-body {
     word-wrap: break-word;
-    width: 1075px;
     white-space: pre-wrap;
     overflow: hidden;
     text-overflow: ellipsis;    
@@ -195,18 +192,35 @@ h6, .h6 {
   background-color: black;
 }
 
-.nav .nav-link{
-  padding: .25rem 0 0 0;
-  border-bottom: .35rem solid transparent;
+.navbar {
+  padding-right: 0.0rem;
+    padding-left: 0.0rem;
 }
 
-.nav .active {
-  border-bottom-color: blue;
+.navbar-nav li {
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
-.nav .nav-link:hover,
-.nav .nav-link:focus {
-  border-bottom-color: blue;
+.navbar-expand-sm .navbar-nav .nav-link {
+    color:black;
+    font-size: 16px;
+
+  }
+
+.navbar-light .navbar-nav .show > .nav-link,
+.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .nav-link.active {
+  color: blue;
+}
+.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+    color: blue;
+   }
+
+.navbar-collapse {
+
+  justify-content: center;
 }
 
 .comment-card > .card {
@@ -235,4 +249,23 @@ h6, .h6 {
 
 .blog-sidebar-source {
   margin-top: 20px;
+}
+
+
+.navbar-toggler {
+  border-width: 10px; 
+}
+
+.nav .nav-link{
+  /* border-bottom: .35rem solid transparent; */
+
+}
+
+.nav .active {
+   /* color: blue; */
+}
+
+.nav .nav-link:hover,
+.nav .nav-link:focus {
+ /* border-bottom-color: blue; */
 }
