--- a/app/views/shared/_blog_featured.html.erb
+++ b/app/views/shared/_blog_featured.html.erb
@@ -1,6 +1,6 @@
  <div class="col-md-12">
-  <div class="card flex-md-row mb-4 shadow-sm">
-    <div class="card-body d-flex flex-column align-items-start">
+  <div class="card ">
+    <div class="card-body ">      
         <div >
           <h3 class= "featured-post">Featured post</h3>
           <% @featured_blogs.each do |featured_blog| %>
@@ -17,3 +17,4 @@
     </div> 
   </div>
 </div> 
+
