Updated text on home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
           <script>
             $(function(){
                 $(".element").typed({
-                  strings: ['"A clever person solves a problem. ^750 <br> A wise person AVOIDS it." ^750 <br> - Albert Einstein'],
+                  strings: ['"A clever person solves a problem. ^750 <br> A wise person [prevents] it." ^750 <br> - Albert Einstein'],
                   typeSpeed: 0
                 });
             });
