--- a/app/views/shared/_portfolio_header.html.erb
+++ b/app/views/shared/_portfolio_header.html.erb
@@ -1,10 +1,11 @@
  <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-muted">The following is a collection of projects I have worked on in all the languages I have become familiar with. They each provide an application of a varying feature. </p>
+    <p class="lead text-muted">The following is a collection of projects I have worked on in all the languages I have become familiar with. They each provide an application of a varying feature. The projects can be examined further on my github page.</p>
+    <a href="https://github.com/watchdogoblivion" class = "social-links" style = "color: black;">Github <%= fa_icon "github" %></a>
     <p>
-      <%= link_to "Find Out More About Me", about_me_path, class: "btn btn-primary" %>
-      <%= link_to "My Blogs", blogs_path, class: "btn btn-secondary" %>
+    	<%= link_to "Find Out More About Me", about_me_path, class: "btn btn-primary" %>
+    	<%= link_to "My Blogs", blogs_path, class: "btn btn-secondary" %>
     </p>
   </div>
 </section>
