Added javascript link to portfolios as well as default image for js portfolio item, refactored buttons on portfolio to helper file

--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -6,21 +6,14 @@
 			<div class="card-body">
 				<p class="card-text">
 					<span><%=  portfolio_item.title %></span>
-					<%= portfolio_item.subtitle%>
+					<mark style= "<%= mark_color(portfolio_item.subtitle) %> ">
+						<%= portfolio_item.subtitle%>		
+					</mark>
 				</p>
 				<div>
 					<div>
-					 	<button type="button" class="btn btn-sm btn-outline-secondary">
-					 		<%= link_to "View", portfolio_show_path(portfolio_item.id) %> 
-					 	</button>
-					 	<% if logged_in?(:site_admin) %>
-						 	<button type="button" class="btn btn-sm btn-outline-secondary">
-						 		<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
-						 	</button>
-						 	<button type="button" class="btn btn-sm btn-outline-secondary">
-						 		<%= link_to "Delete",portfolio_item, method: :delete, data: { confirm: 'Are you sure?' } %>
-						 	</button>
-					 	<% end %>
+						<%= user_buttons(portfolio_item) %>
+                        <%= admin_buttons (portfolio_item) %>
 					</div>
 				</div>
 			</div>
