--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,7 +160,11 @@ h6, .h6 {
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
 }
-
+.hi{
+  border: 5px solid ;
+  padding: 0px;
+  margin: 0px;
+}
 .background-about{
   background: image-url('tech.png') no-repeat; 
 }
