--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,9 +1,11 @@
 <header>
 	<nav class="navbar navbar-expand-md navbar-light">
+		
 		<div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+			<%= image_tag "ruby.png", width: "4%", alt: "Ruby image", class: "no" %>
 		    <ul class=" navbar-nav  nav">
 		          <%= nav_helper("nav-link") %>
-		          <li><%= login_helper("nav-link login-pads") %><li>
+		          <%= login_helper("nav-link login-pads") %>
 		    </ul> 
 	    </div>
 		<div class="navbar-brand"></div>
