--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -18,6 +18,8 @@
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
       <a href="/about-me" class="navbar-brand d-flex align-items-center">
+        <%= image_tag "ruby.png", width: "6%", alt: "Ruby image", class: "" %>
+            &emsp;
         <strong>Samuel Dorilas</strong>
       </a>
       
