--- a/app/views/pages/more_about_me.html.erb
+++ b/app/views/pages/more_about_me.html.erb
@@ -5,7 +5,7 @@
         <div class= "backdrop">
         	<p></p>
     	    <h1>More About Me</h1>
-      		<p >In addition to programming, I have a great passion for health and fitness. I have a second bachelors degree in exercise and health science. I have worked as personal trainer with many clients. I have also interned at Massachusetts General Hospital for physical therapy. I competed in a few powerlifting competitions and acquired the state title for the bench press. I hope to acquire the U.S.A title soon. I competed in one bodybuilding competition and won on my first attempt getting by pro card. Whether it be mental or physical i strive to be the very best that I can. </p>
+      		<p >In addition to programming, I have a great passion for health and fitness. I have a second bachelors degree in Exercise and Health Science. I have worked as a personal trainer with many clients. I have also interned at Massachusetts General Hospital for physical therapy. I competed in a few powerlifting competitions and acquired the state title for the bench press. I hope to acquire the U.S.A title one day. I competed in one bodybuilding competition and I won on my first attempt, getting my pro card. Whether it be mental or physical I strive to be the very best that I can be. </p>
       	</div>
       </div>
       	<%= render "shared/about_me_images", images: about_me_items %>
