--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@
 					<div class = "container">
 						<span style="float: left">
 							<button class = "button text-sizing mt"><%= link_to "More About Me", more_about_me_path%></button>
-						</span>
+					</span>
 						<span style="float: right">
 							<button class = "button text-sizing mt"><%= link_to "Certifications+", certifications_path %></button>
 					    </span>
@@ -124,7 +124,7 @@
 		</div>
 		<div class = "col-md-5">
 			<div class = "container">
-				<%= image_tag "profile.png", width: "85%", alt: "Portfolio image", class: "" %>
+				<%= image_tag "profile2.jpg", width: "85%", alt: "Portfolio image", class: "" %>
 		    </div>
 		</div>
 	</div>
