--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,22 +1,24 @@
 <% @portfolio_items.each do |portfolio_item| %>
-	<div class="col-md-4">
-		<div class="card mb-4 shadow-sm" data-id= "<%= portfolio_item.id %>">
-			<!-- This method is to account for heroku ephemeral filesystem not storing images due to dynos resetting every 24 hours, the proper work around is using a cloud storage -->
-			<%= place_images (portfolio_item) %> 
-			<div class="card-body">
-				<p class="card-text">
-					<span><%=  portfolio_item.title %></span>
-					<mark style= "<%= mark_color(portfolio_item.subtitle) %> ">
-						<%= portfolio_item.subtitle%>		
-					</mark>
-				</p>
-				<div>
+	<% unless portfolio_item.id == 7 %>
+		<div class="col-md-4">
+			<div class="card mb-4 shadow-sm" data-id= "<%= portfolio_item.id %>">
+				<!-- This method is to account for heroku ephemeral filesystem not storing images due to dynos resetting every 24 hours, the proper work around is using a cloud storage -->
+				<%= place_images (portfolio_item) %> 
+				<div class="card-body">
+					<p class="card-text">
+						<span><%=  portfolio_item.title %></span>
+						<mark style= "<%= mark_color(portfolio_item.subtitle) %> ">
+							<%= portfolio_item.subtitle%>		
+						</mark>
+					</p>
 					<div>
-						<%= user_buttons(portfolio_item) %>
-                        <%= admin_buttons (portfolio_item) %>
+						<div>
+							<%= user_buttons(portfolio_item) %>
+	                        <%= admin_buttons (portfolio_item) %>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>	
+	<% end %>	
 <% end %>
